--- a/JavaRushPlugin.properties
+++ b/JavaRushPlugin.properties
@@ -1,9 +1,9 @@
-#Tue Mar 31 13:24:11 YEKT 2020
+#Thu Apr 02 22:57:56 YEKT 2020
 javarush.query.filter=
-javarush.quest.filter=QUEST_JAVA_SYNTAX
+javarush.quest.filter=QUEST_JAVA_CORE
 javarush.status.filter=ASSIGNED
-javarush.last.task.key=com.javarush.task.task07.task0712
+javarush.last.task.key=com.javarush.task.task11.task1123
 javarush.user.secretkey=445f534c-6d64-4b2e-8462-dfc4dab04890
-javarush.last.task.path=D\:/projects/JavaRushTasks/1.JavaSyntax/src/com/javarush/task/task07/task0712
-javarush.level.filter=7
+javarush.last.task.path=D\:/projects/JavaRushTasks/2.JavaCore/src/com/javarush/task/task11/task1123
+javarush.level.filter=-1
 javarush.session.id=4549e338-5e5f-4333-8f90-5821f4ce9897
