--- a/JavaRushPlugin.properties
+++ b/JavaRushPlugin.properties
@@ -1,13 +1,13 @@
-#Tue Apr 21 20:56:40 YEKT 2020
-javarush.level.filter=7
+#Wed Apr 22 21:55:19 YEKT 2020
+javarush.level.filter=8
 javarush.skip.set.autoscrolls=true
 >>>>>>>=3680f8d3f91e10d45ad777b7cd5e570863e283d9
 javarush.session.id=4549e338-5e5f-4333-8f90-5821f4ce9897
 <<<<<<<=HEAD
-javarush.last.task.key=com.javarush.task.task17.task1718
+javarush.last.task.key=com.javarush.task.task08.task0824
 javarush.status.filter=ASSIGNED
 javarush.query.filter=
 javarush.user.secretkey=445f534c-6d64-4b2e-8462-dfc4dab04890
-javarush.last.task.path=D\:/projects/JavaRushTasks/2.JavaCore/src/com/javarush/task/task17/task1718
-javarush.quest.filter=QUEST_JAVA_CORE
+javarush.last.task.path=D\:/projects/JavaRushTasks/1.JavaSyntax/src/com/javarush/task/task08/task0824
+javarush.quest.filter=QUEST_JAVA_SYNTAX
 =\=\=\=\=\=\=
