--- a/JavaRushPlugin.properties
+++ b/JavaRushPlugin.properties
@@ -1,13 +1,13 @@
-#Sat Apr 25 18:06:33 YEKT 2020
+#Mon Apr 27 01:47:32 YEKT 2020
 javarush.level.filter=8
 javarush.skip.set.autoscrolls=true
 >>>>>>>=3680f8d3f91e10d45ad777b7cd5e570863e283d9
 javarush.session.id=4549e338-5e5f-4333-8f90-5821f4ce9897
 <<<<<<<=HEAD
-javarush.last.task.key=com.javarush.task.task07.task0724
-javarush.status.filter=SOLVED
+javarush.last.task.key=com.javarush.task.task18.task1816
+javarush.status.filter=ASSIGNED
 javarush.query.filter=
 javarush.user.secretkey=445f534c-6d64-4b2e-8462-dfc4dab04890
-javarush.last.task.path=D\:/projects/JavaRushTasks/1.JavaSyntax/src/com/javarush/task/task07/task0724
-javarush.quest.filter=QUEST_JAVA_SYNTAX
+javarush.last.task.path=D\:/projects/JavaRushTasks/2.JavaCore/src/com/javarush/task/task18/task1816
+javarush.quest.filter=QUEST_JAVA_CORE
 =\=\=\=\=\=\=
