--- a/JavaRushPlugin.properties
+++ b/JavaRushPlugin.properties
@@ -1,13 +1,13 @@
-#Thu Sep 17 22:12:31 YEKT 2020
+#Sun Sep 20 23:13:39 YEKT 2020
 javarush.level.filter=-1
 javarush.skip.set.autoscrolls=true
 >>>>>>>=3680f8d3f91e10d45ad777b7cd5e570863e283d9
 javarush.session.id=4549e338-5e5f-4333-8f90-5821f4ce9897
 <<<<<<<=HEAD
-javarush.last.task.key=com.javarush.task.task32.task3209.big10
+javarush.last.task.key=com.javarush.task.task19.task1923
 javarush.status.filter=ASSIGNED
 javarush.query.filter=
 javarush.user.secretkey=445f534c-6d64-4b2e-8462-dfc4dab04890
-javarush.last.task.path=D\:/projects/JavaRushTasks/3.JavaMultithreading/src/com/javarush/task/task32/task3209
-javarush.quest.filter=QUEST_JAVA_MULTITHREADING
+javarush.last.task.path=D\:/projects/JavaRushTasks/2.JavaCore/src/com/javarush/task/task19/task1923
 =\=\=\=\=\=\=
+javarush.quest.filter=QUEST_JAVA_CORE
