--- a/JavaRushPlugin.properties
+++ b/JavaRushPlugin.properties
@@ -1,13 +1,13 @@
-#Fri Nov 13 23:08:42 YEKT 2020
+#Sun Nov 15 19:43:55 YEKT 2020
 javarush.level.filter=-1
 javarush.skip.set.autoscrolls=true
 >>>>>>>=3680f8d3f91e10d45ad777b7cd5e570863e283d9
 javarush.session.id=4549e338-5e5f-4333-8f90-5821f4ce9897
 <<<<<<<=HEAD
-javarush.last.task.key=com.javarush.task.task25.task2515.big11
+javarush.last.task.key=com.javarush.task.task32.task3204
 javarush.status.filter=ASSIGNED
 javarush.query.filter=
 javarush.user.secretkey=445f534c-6d64-4b2e-8462-dfc4dab04890
-javarush.last.task.path=D\:/projects/JavaRushTasks/4.JavaCollections/src/com/javarush/task/task25/task2515
-javarush.quest.filter=QUEST_JAVA_COLLECTIONS
+javarush.last.task.path=D\:/projects/JavaRushTasks/4.JavaCollections/src/com/javarush/task/task32/task3204
 =\=\=\=\=\=\=
+javarush.quest.filter=QUEST_JAVA_COLLECTIONS
