--- a/JavaRushPlugin.properties
+++ b/JavaRushPlugin.properties
@@ -1,13 +1,13 @@
-#Fri Dec 18 15:42:27 YEKT 2020
+#Sat Jun 26 22:06:39 YEKT 2021
 =\=\=\=\=\=\=
-javarush.last.task.key=com.javarush.task.task38.task3809
+javarush.last.task.key=com.javarush.task.task28.task2810.big16
 javarush.session.id=4549e338-5e5f-4333-8f90-5821f4ce9897
 javarush.query.filter=
 >>>>>>>=3680f8d3f91e10d45ad777b7cd5e570863e283d9
 javarush.quest.filter=QUEST_JAVA_COLLECTIONS
 javarush.skip.set.autoscrolls=true
 javarush.user.secretkey=445f534c-6d64-4b2e-8462-dfc4dab04890
-javarush.last.task.path=C\:/Projects/JavaRushTasks/4.JavaCollections/src/com/javarush/task/task38/task3809
+javarush.last.task.path=C\:/Projects/JavaRushTasks/4.JavaCollections/src/com/javarush/task/task28/task2810
 javarush.status.filter=ASSIGNED
 <<<<<<<=HEAD
 javarush.level.filter=-1
