--- a/JavaRushPlugin.properties
+++ b/JavaRushPlugin.properties
@@ -1,13 +1,13 @@
-#Fri Jul 30 01:07:13 YEKT 2021
+#Fri Jul 30 01:40:32 YEKT 2021
 =\=\=\=\=\=\=
-javarush.last.task.key=com.javarush.task.task39.task3902
+javarush.last.task.key=com.javarush.task.task26.task2613.big02
 javarush.session.id=4549e338-5e5f-4333-8f90-5821f4ce9897
 javarush.query.filter=
 >>>>>>>=3680f8d3f91e10d45ad777b7cd5e570863e283d9
 javarush.quest.filter=QUEST_JAVA_COLLECTIONS
 javarush.skip.set.autoscrolls=true
 javarush.user.secretkey=445f534c-6d64-4b2e-8462-dfc4dab04890
-javarush.last.task.path=C\:/Projects/JavaRushTasks/4.JavaCollections/src/com/javarush/task/task39/task3902
+javarush.last.task.path=C\:/Projects/JavaRushTasks/4.JavaCollections/src/com/javarush/task/task26/task2613
 javarush.status.filter=ASSIGNED
 <<<<<<<=HEAD
 javarush.level.filter=-1
