Task 4004 use class Polygon

--- a/JavaRushPlugin.properties
+++ b/JavaRushPlugin.properties
@@ -1,13 +1,13 @@
-#Mon Aug 30 14:43:11 YEKT 2021
+#Mon Aug 30 15:42:05 YEKT 2021
 =\=\=\=\=\=\=
-javarush.last.task.key=com.javarush.task.task40.task4004
+javarush.last.task.key=com.javarush.task.task34.task3410.big01
 javarush.session.id=4549e338-5e5f-4333-8f90-5821f4ce9897
 javarush.query.filter=
 >>>>>>>=3680f8d3f91e10d45ad777b7cd5e570863e283d9
 javarush.quest.filter=QUEST_JAVA_COLLECTIONS
 javarush.skip.set.autoscrolls=true
 javarush.user.secretkey=445f534c-6d64-4b2e-8462-dfc4dab04890
-javarush.last.task.path=C\:/Projects/JavaRushTasks/4.JavaCollections/src/com/javarush/task/task40/task4004
+javarush.last.task.path=C\:/Projects/JavaRushTasks/4.JavaCollections/src/com/javarush/task/task34/task3410
 javarush.status.filter=ASSIGNED
 <<<<<<<=HEAD
 javarush.level.filter=10
