--- a/JavaRushPlugin.properties
+++ b/JavaRushPlugin.properties
@@ -1,13 +1,13 @@
-#Wed Sep 01 14:25:53 YEKT 2021
+#Sun Sep 05 19:08:48 YEKT 2021
 =\=\=\=\=\=\=
-javarush.last.task.key=com.javarush.task.task34.task3410.big17
+javarush.last.task.key=com.javarush.task.task40.task4009
 javarush.session.id=4549e338-5e5f-4333-8f90-5821f4ce9897
 javarush.query.filter=
 >>>>>>>=3680f8d3f91e10d45ad777b7cd5e570863e283d9
 javarush.quest.filter=QUEST_JAVA_COLLECTIONS
 javarush.skip.set.autoscrolls=true
 javarush.user.secretkey=445f534c-6d64-4b2e-8462-dfc4dab04890
-javarush.last.task.path=C\:/Projects/JavaRushTasks/4.JavaCollections/src/com/javarush/task/task34/task3410
+javarush.last.task.path=C\:/Projects/JavaRushTasks/4.JavaCollections/src/com/javarush/task/task40/task4009
 javarush.status.filter=ASSIGNED
 <<<<<<<=HEAD
-javarush.level.filter=10
+javarush.level.filter=9
