--- a/JavaRushPlugin.properties
+++ b/JavaRushPlugin.properties
@@ -1,5 +1,5 @@
-#Thu Dec 02 14:14:40 YEKT 2021
-javarush.last.task.key=com.javarush.games.game2048.part13
+#Fri Dec 03 12:53:29 YEKT 2021
+javarush.last.task.key=com.javarush.games.spaceinvaders.part01
 javarush.session.id=4549e338-5e5f-4333-8f90-5821f4ce9897
 javarush.query.filter=
 >>>>>>>=3680f8d3f91e10d45ad777b7cd5e570863e283d9
@@ -8,7 +8,7 @@ javarush.quest.filter=QUEST_GAMES
 javarush.skip.set.autoscrolls=true
 desktop-game-engine.jar=1.0
 javarush.user.secretkey=445f534c-6d64-4b2e-8462-dfc4dab04890
-javarush.last.task.path=C\:/Projects/JavaRushTasks/8.Games/src/com/javarush/games/game2048
+javarush.last.task.path=C\:/Projects/JavaRushTasks/8.Games/src/com/javarush/games/spaceinvaders
 javarush.status.filter=ASSIGNED
 <<<<<<<=HEAD
 javarush.level.filter=0
