--- a/JavaRushPlugin.properties
+++ b/JavaRushPlugin.properties
@@ -1,14 +1,14 @@
-#Tue Dec 07 00:17:42 YEKT 2021
-javarush.last.task.key=com.javarush.games.spaceinvaders.part05
+#Tue Dec 07 23:52:01 YEKT 2021
+javarush.last.task.key=com.javarush.task.task39.task3913.big08
 javarush.session.id=4549e338-5e5f-4333-8f90-5821f4ce9897
 javarush.query.filter=
 >>>>>>>=3680f8d3f91e10d45ad777b7cd5e570863e283d9
-javarush.quest.filter=QUEST_GAMES
+javarush.quest.filter=QUEST_JAVA_COLLECTIONS
 \=\=\=\=\=\==
 javarush.skip.set.autoscrolls=true
 desktop-game-engine.jar=1.0
 javarush.user.secretkey=445f534c-6d64-4b2e-8462-dfc4dab04890
-javarush.last.task.path=C\:/Projects/JavaRushTasks/8.Games/src/com/javarush/games/spaceinvaders
+javarush.last.task.path=C\:/Projects/JavaRushTasks/4.JavaCollections/src/com/javarush/task/task39/task3913
 javarush.status.filter=ASSIGNED
 <<<<<<<=HEAD
-javarush.level.filter=0
+javarush.level.filter=7
