--- a/JavaRushPlugin.properties
+++ b/JavaRushPlugin.properties
@@ -1,5 +1,5 @@
-#Wed Dec 08 02:47:54 YEKT 2021
-javarush.last.task.key=com.javarush.task.task27.task2712.big23
+#Wed Dec 08 03:01:23 YEKT 2021
+javarush.last.task.key=com.javarush.task.task22.task2201
 javarush.session.id=4549e338-5e5f-4333-8f90-5821f4ce9897
 javarush.query.filter=
 >>>>>>>=3680f8d3f91e10d45ad777b7cd5e570863e283d9
@@ -8,7 +8,7 @@ javarush.quest.filter=QUEST_JAVA_MULTITHREADING
 javarush.skip.set.autoscrolls=true
 desktop-game-engine.jar=1.0
 javarush.user.secretkey=445f534c-6d64-4b2e-8462-dfc4dab04890
-javarush.last.task.path=C\:/Projects/JavaRushTasks/3.JavaMultithreading/src/com/javarush/task/task27/task2712
+javarush.last.task.path=C\:/Projects/JavaRushTasks/3.JavaMultithreading/src/com/javarush/task/task22/task2201
 javarush.status.filter=ASSIGNED
 <<<<<<<=HEAD
-javarush.level.filter=9
+javarush.level.filter=-1
