--- a/JavaRushPlugin.properties
+++ b/JavaRushPlugin.properties
@@ -1,7 +1,7 @@
-#Wed Dec 08 13:46:25 YEKT 2021
-javarush.last.task.key=com.javarush.games.racer.part27
+#Wed Dec 08 13:47:02 YEKT 2021
+javarush.last.task.key=com.javarush.games.racer.part28
 javarush.session.id=4549e338-5e5f-4333-8f90-5821f4ce9897
-javarush.query.filter=27
+javarush.query.filter=28/28
 >>>>>>>=3680f8d3f91e10d45ad777b7cd5e570863e283d9
 javarush.quest.filter=QUEST_GAMES
 \=\=\=\=\=\==
