--- a/JavaRushPlugin.properties
+++ b/JavaRushPlugin.properties
@@ -1,14 +1,14 @@
-#Wed Dec 08 13:47:02 YEKT 2021
-javarush.last.task.key=com.javarush.games.racer.part28
+#Wed Dec 08 13:55:20 YEKT 2021
+javarush.last.task.key=com.javarush.games.moonlander.part01
 javarush.session.id=4549e338-5e5f-4333-8f90-5821f4ce9897
-javarush.query.filter=28/28
+javarush.query.filter=1
 >>>>>>>=3680f8d3f91e10d45ad777b7cd5e570863e283d9
 javarush.quest.filter=QUEST_GAMES
 \=\=\=\=\=\==
 javarush.skip.set.autoscrolls=true
 desktop-game-engine.jar=1.0
 javarush.user.secretkey=445f534c-6d64-4b2e-8462-dfc4dab04890
-javarush.last.task.path=C\:/Projects/JavaRushTasks/8.Games/src/com/javarush/games/racer
+javarush.last.task.path=C\:/Projects/JavaRushTasks/8.Games/src/com/javarush/games/moonlander
 javarush.status.filter=SOLVED
 <<<<<<<=HEAD
 javarush.level.filter=-1
