--- a/JavaRushPlugin.properties
+++ b/JavaRushPlugin.properties
@@ -1,14 +1,14 @@
-#Wed Dec 08 14:06:34 YEKT 2021
-javarush.last.task.key=com.javarush.games.moonlander.part23
+#Fri Dec 10 15:03:39 YEKT 2021
+javarush.last.task.key=com.javarush.task.task16.task1632
 javarush.session.id=4549e338-5e5f-4333-8f90-5821f4ce9897
-javarush.query.filter=23/23
+javarush.query.filter=
 >>>>>>>=3680f8d3f91e10d45ad777b7cd5e570863e283d9
-javarush.quest.filter=QUEST_GAMES
+javarush.quest.filter=ALL_QUESTS
 \=\=\=\=\=\==
 javarush.skip.set.autoscrolls=true
 desktop-game-engine.jar=1.0
 javarush.user.secretkey=445f534c-6d64-4b2e-8462-dfc4dab04890
-javarush.last.task.path=C\:/Projects/JavaRushTasks/8.Games/src/com/javarush/games/moonlander
-javarush.status.filter=SOLVED
+javarush.last.task.path=C\:/Projects/JavaRushTasks/2.JavaCore/src/com/javarush/task/task16/task1632
+javarush.status.filter=ASSIGNED
 <<<<<<<=HEAD
 javarush.level.filter=-1
